tests/scripts/enum-associated.hk.err
error: 2:14 - Expected ')' after associated value
  Some(string, int),
             ^
