tests/scripts/enum-associated.hk
enum Option {
  None,
  Some(string, int),
}

fn main() {
  let option = Option::Some("Hello", 18);
  match option {
    Option::None => println!("None"),
    Option::Some(name, age) => println!("Name: {} age: {}", name, age),
  }
}

main()
